contrast fix

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -267,8 +267,9 @@ header {
 /* VISIT */
 
 .red-color {
-  color: #FF9933;
   font-weight: bold;
+  background-color: #FF9933;
+  padding: 0 2px;
 }
 
 i {
